fix: update rs-school-icon-img path

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </li>
           <li class="rs-school-icon">
             <a href="https://rs.school/js/"
-              ><img src="/img/rs_school_js.svg" alt="RS-School logo"
+              ><img src="img/rs_school_js.svg" alt="RS-School logo"
             /></a>
           </li>
         </ul>
