fix: fix rsschool link

--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
             <a href="https://github.com/katiadeo" class="github"></a>
           </li>
           <li class="rs-school-icon">
-            <a href="https://rs.school/js/"
-              ><img src="img/rs_school_js.svg" alt="RS-School logo"
-            /></a>
+            <a href="https://rs.school/js/" class="rs-school-logo"></a>
           </li>
         </ul>
       </footer>
