feat: add functional burger menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__container container">
+          <button class="burger" type="button" aria-label="toggle header__burger">
+            <span aria-hidden="true"></span>
+          </button>
           <nav class="header__nav">
             <ul class="nav__links">
               <li class="nav__link"><a href="#profile">PROFILE</a></li>
