feat: add profile section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
       <main class="main">
         <!-- PROFILE -->
         <section class="profile" id="profile">
-          <div class="container profile__container"></div>
+          <div class="container profile__container">
+            <div class="profile__img">
+              <!-- <img src="/img/jpg/profile-photo.jpg" alt="Profile photo"> -->
+            </div>
+            <div class="profile__info">
+              <h1 class="heading">Tatiana</h1>
+              <div class="description">
+                <h2 class="description__title">Summary</h2>
+                <p class="description__text">A newbie who is trying to find her way in the Wide World of
+                  Programming.<br />Who never gives up. Who is eager to start coding.</p>
+                <h2 class="description__title">Goal</h2>
+                <p class="description__text">To challenge a new career path.</p>
+              </div>
+            </div>
+          </div>
         </section>
         <!-- EDUCATION -->
         <section class="education">
