--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
         </section>
         <!-- PROJECTS -->
         <section class="projects" id="projects">
-          <div class="container projects__container"></div>
+          <div class="container projects__container">
+            <div class="slider">
+              <div class="item">
+                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd">
+              </div>
+              <!-- <div class="item">
+                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd">
+              </div> -->
+              <a class="arrow arrow__prev">&#10094;</a>
+              <a class="arrow arrow__next">&#10095;</a>
+            </div>
+          </div>
         </section>
         <!-- SKILLS -->
         <section class="skills">
