--- a/index.html
+++ b/index.html
@@ -1,81 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>MY FREAKING CV</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <!-- HEADER -->
-      <header class="header">
-        <div class="header__container container">
-          <button class="burger" type="button" aria-label="toggle header__burger">
-            <span aria-hidden="true"></span>
-          </button>
-          <nav class="header__nav">
-            <ul class="nav__links">
-              <li class="nav__link"><a href="#profile">PROFILE</a></li>
-              <li class="nav__link"><a href="#">CONTACT</a></li>
-              <li class="nav__link"><a href="#">EDUCATION</a></li>
-              <li class="nav__link"><a href="#">SKILLS</a></li>
-              <li class="nav__link"><a href="#projects">PROJECTS</a></li>
-            </ul>
-          </nav>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>MY FREAKING CV</title>
+    </head>
+    <body>
+        <div class="wrapper">
+            <!-- HEADER -->
+            <header class="header">
+                <div class="header__container container">
+                    <button class="burger" type="button" aria-label="toggle header__burger">
+                        <span aria-hidden="true"></span>
+                    </button>
+                    <nav class="header__nav">
+                        <ul class="nav__links">
+                            <li class="nav__link"><a href="#profile">PROFILE</a></li>
+                            <li class="nav__link"><a href="#">CONTACT</a></li>
+                            <li class="nav__link"><a href="#">EDUCATION</a></li>
+                            <li class="nav__link"><a href="#">SKILLS</a></li>
+                            <li class="nav__link"><a href="#projects">PROJECTS</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+            <!-- MAIN CONTENT -->
+            <main class="main">
+                <!-- PROFILE -->
+                <section class="profile" id="profile">
+                    <div class="container profile__container">
+                        <div class="profile__info">
+                            <a href="https://www.facebook.com/tatti.katiadeo/"><img class="profile__img" src="/assets/img/jpg/profile2.jpg" alt="Profile photo" /></a>
+                            <div class="contacts">
+                                <ul class="contacts__list">
+                                    <li class="contacts__item">
+                                        <a href="tel:+79600435127" class="phone">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="mobile-alt" class="svg-inline--fa fa-mobile-alt fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                                <path class="svg-fill" fill="currentColor" d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="contacts__item">
+                                        <a href="mailto:niel.0305@gmail.com" class="gmail">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                                <path
+                                                    class="svg-fill"
+                                                    fill="currentColor"
+                                                    d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
+                                                ></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="contacts__item">
+                                        <a href="https://t.me/katiadeo" class="telegram">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="telegram-plane" class="svg-inline--fa fa-telegram-plane fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                                <path class="svg-fill" fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="contacts__item">
+                                        <a href="https://github.com/katiadeo" class="github">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" class="svg-inline--fa fa-github fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                                                <path
+                                                    class="svg-fill"
+                                                    fill="currentColor"
+                                                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+                                                ></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="profile__data">
+                            <h1 class="heading">Tatiana</h1>
+                            <div class="description">
+                                <h2 class="description__title">Summary</h2>
+                                <p class="description__text">A newbie who is trying to find her way in the Wide World of Programming.<br />Who never gives up. Who is eager to start coding.</p>
+                                <h2 class="description__title">Goal</h2>
+                                <p class="description__text">To challenge a new career path.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- EDUCATION -->
+                <section class="education">
+                    <div class="container education__container">
+                        <h2>Education</h2>
+                    </div>
+                </section>
+                <!-- PROJECTS -->
+                <section class="projects" id="projects">
+                    <div class="container projects__container">
+                        <h2>Projects</h2>
+                        <div class="slider">
+                            <!-- <div class="item">
+                                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd" />
+                            </div>
+                            <div class="item">
+                                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd" />
+                            </div> -->
+                            <a class="arrow arrow__prev">&#10094;</a>
+                            <a class="arrow arrow__next">&#10095;</a>
+                        </div>
+                    </div>
+                </section>
+                <!-- SKILLS -->
+                <section class="skills">
+                    <div class="container skills__container"></div>
+                </section>
+            </main>
+            <!-- FOOTER -->
+            <footer class="footer">
+                <div class="footer__container container"></div>
+            </footer>
         </div>
-      </header>
-      <!-- MAIN CONTENT -->
-      <main class="main">
-        <!-- PROFILE -->
-        <section class="profile" id="profile">
-          <div class="container profile__container">
-            <div class="profile__img">
-              <!-- <img src="/img/jpg/profile-photo.jpg" alt="Profile photo"> -->
-            </div>
-            <div class="profile__info">
-              <h1 class="heading">Tatiana</h1>
-              <div class="description">
-                <h2 class="description__title">Summary</h2>
-                <p class="description__text">A newbie who is trying to find her way in the Wide World of
-                  Programming.<br />Who never gives up. Who is eager to start coding.</p>
-                <h2 class="description__title">Goal</h2>
-                <p class="description__text">To challenge a new career path.</p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- EDUCATION -->
-        <section class="education">
-          <div class="container education__container"></div>
-        </section>
-        <!-- PROJECTS -->
-        <section class="projects" id="projects">
-          <div class="container projects__container">
-            <div class="slider">
-              <div class="item">
-                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd">
-              </div>
-              <!-- <div class="item">
-                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd">
-              </div> -->
-              <a class="arrow arrow__prev">&#10094;</a>
-              <a class="arrow arrow__next">&#10095;</a>
-            </div>
-          </div>
-        </section>
-        <!-- SKILLS -->
-        <section class="skills">
-          <div class="container skills__container"></div>
-        </section>
-      </main>
-      <!-- FOOTER -->
-      <footer class="footer">
-        <div class="footer__container container"></div>
-      </footer>
-    </div>
-    <script src="script.js"></script>
-  </body>
+        <script src="script.js"></script>
+    </body>
 </html>
