feat: update languages section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@
                 <section class="languages" id="languages">
                     <div class="container languages__container">
                         <h2 class="subheading">Languages</h2>
+                        <div class="languages__wrapper">
+                            <div class="language">
+                                <span class="language__name">RUSSIAN</span>
+                                <strong class="language__skill">100%</strong>
+                            </div>
+                            <div class="language">
+                                <span class="language__name">ENGLISH</span>
+                                <strong class="language__skill">90%</strong>
+                            </div>
+                            <div class="language">
+                                <span class="language__name">GERMAN</span>
+                                <strong class="language__skill">60%</strong>
+                            </div>
+                            <div class="language">
+                                <span class="lang-language__name">ITALIAN</span>
+                                <strong class="language__skill">30%</strong>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </main>
