--- a/index.html
+++ b/index.html
@@ -109,7 +109,23 @@
                 <!-- SKILLS -->
                 <section class="skills" id="skills">
                     <div class="container skills__container">
-                        <h2 class="subheading">Skills</h2>
+                        <h2 class="subheading">Programming skills</h2>
+
+                        <ul class="skills-list">
+                            <li class="skills-list__item">
+                                <div class="html"></div>
+                                <div class="progress percent-80"></div>
+                            </li>
+                            <li class="skills-list__item">
+                                <div class="css"></div>
+                                <div class="progress percent-80"></div>
+                            </li>
+                            <li class="skills-list__item">
+                                <div class="js"></div>
+                                <div class="progress percent-60"></div>
+                            </li>
+                        </ul>
+
                     </div>
                 </section>
                 <!-- EDUCATION -->
