--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
                     <div class="container projects__container">
                         <h2 class="subheading">Projects</h2>
                         <div class="slider">
-                            <!-- <div class="item">
-                                              <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd" />
-                                          </div>
-                                          <div class="item">
-                                              <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="tbd" />
-                                          </div> -->
+                            <div class="slider__slide">
+                                <a href="https://rolling-scopes-school.github.io/katiadeo-JSFE2021Q1/virtual-piano/" target="_blank">
+                                    <img src="../assets/img/png/virtual-piano.png" alt="virtual piano" />
+                                </a>
+                            </div>
+                            <div class="slider__slide">
+                                <a href="https://rolling-scopes-school.github.io/katiadeo-JSFE2021Q1/photo-filter/" target="_blank">
+                                    <img src="../assets/img/png/photo-filter.png" alt="photo filter" />
+                                </a>
+                            </div>
                             <a class="arrow arrow__prev">&#10094;</a>
                             <a class="arrow arrow__next">&#10095;</a>
                         </div>
@@ -125,7 +129,6 @@
                                 <div class="progress percent-60"></div>
                             </li>
                         </ul>
-
                     </div>
                 </section>
                 <!-- EDUCATION -->
