fix: fix links to images and fonts

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                         <div class="slider">
                             <div class="slider__slide">
                                 <a href="https://rolling-scopes-school.github.io/katiadeo-JSFE2021Q1/virtual-piano/" target="_blank">
-                                    <img src="../assets/img/png/virtual-piano.png" alt="virtual piano" />
+                                    <img src="./assets/img/png/virtual-piano.png" alt="virtual piano" />
                                 </a>
                             </div>
                             <div class="slider__slide">
                                 <a href="https://rolling-scopes-school.github.io/katiadeo-JSFE2021Q1/photo-filter/" target="_blank">
-                                    <img src="../assets/img/png/photo-filter.png" alt="photo filter" />
+                                    <img src="./assets/img/png/photo-filter.png" alt="photo filter" />
                                 </a>
                             </div>
                             <a class="arrow arrow__prev">&#10094;</a>
