feat: add projects to the slider

--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
                                     <img src="./assets/img/png/photo-filter.png" alt="photo filter" />
                                 </a>
                             </div>
+                            <div class="slider__slide">
+                                <a href="https://rolling-scopes-school.github.io/katiadeo-JSFEPRESCHOOL/drum-kit/index.html" target="_blank">
+                                    <img src="./assets/img/png/drum-kit.png" alt="drum kit" />
+                                </a>
+                            </div>
+                            <div class="slider__slide">
+                                <a href="https://rolling-scopes-school.github.io/katiadeo-JSFEPRESCHOOL/js-clock/" target="_blank">
+                                    <img src="./assets/img/png/js-clock.png" alt="js clock" />
+                                </a>
+                            </div>
                             <a class="arrow arrow__prev">&#10094;</a>
                             <a class="arrow arrow__next">&#10095;</a>
                         </div>
